force-app/main/default/objects/Survey_Asset_Location__c/Survey_Asset_Location__c.object-meta.xml
<CustomObject>
    <label>Survey Asset Location</label>
    <nameField>
        <displayFormat>SA{0000}</displayFormat>
        <label>Survey Asset Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Asset Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>