force-app/main/default/objects/Survey_Asset_Location__c/fields/Originating_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Originating_Record_ID__c</fullName>
    <description>Salesforce Record ID that created this record. Either the opportunity product or the order product record.</description>
    <externalId>true</externalId>
    <label>Originating Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>