force-app/main/default/objects/Survey_Asset_Location__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Survey_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>