force-app/main/default/objects/Survey_Asset_Location__c/fields/Related_Product__c.field-meta.xml
<CustomField>
    <fullName>Related_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Survey Asset Locations (Related Product)</relationshipLabel>
    <relationshipName>Survey_Asset_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>