force-app/main/default/objects/Survey_Asset_Location__c/fields/Service_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Service_Frequency__c</fullName>
    <label>Service Frequency</label>
    <length>25</length>
    <type>Text</type>
</CustomField>