force-app/main/default/objects/Survey_Asset_Location__c/fields/Site_Survey__c.field-meta.xml
<CustomField>
    <fullName>Site_Survey__c</fullName>
    <label>Site Survey</label>
    <referenceTo>Site_Survey__c</referenceTo>
    <relationshipLabel>Survey Asset Locations</relationshipLabel>
    <relationshipName>Survey_Asset_Locations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>