force-app/main/default/objects/Survey_Asset_Location__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(ISBLANK(Survey_Location__c ), &quot;Unallocated&quot;, &quot;Allocated&quot;)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>