force-app/main/default/objects/Survey_Asset_Location__c/fields/Survey_Location__c.field-meta.xml
<CustomField>
    <fullName>Survey_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Survey_Location__c.Site_Survey__c</field>
            <operation>equals</operation>
            <valueField>$Source.Site_Survey__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Survey_Location__c</referenceTo>
    <relationshipLabel>Survey Asset Locations</relationshipLabel>
    <relationshipName>Survey_Assets_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>